<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="topImage_description">Google logo</string>
    <string name="udacity_description">Udacity logo</string>
    <string name="contact">Contact Us</string>
    <string name="udacity">Udacity</string>
    <string name="address">2465 Latham St Mountain View, CA 94043</string>
    <string name="phoneNo">650-555-5555</string>
</resources>












